uint8_t type located in usual header on HP-UX needed for jbig2dec ; bug 688184

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11238 a1074d23-0009-0410-80fe-cf8c14f379e6